--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Il mio viaggio a Londra</h1>
+    <img src="pexels-bill-emrich-230794-0.jpg" alt="London Eye">
+    <img src="pexels-bill-emrich-230794-1.jpg" alt="London View">
+    <img src="pexels-bill-emrich-230794-2.jpg" alt="London Big Ben">
     <hr> 
     <h2>Le mie spese</h2>
 </body>
