Aggiunto table (prima e seconda riga)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
     <img src="pexels-bill-emrich-230794-0.jpg" alt="London Eye">
     <img src="pexels-bill-emrich-230794-1.jpg" alt="London View">
     <img src="pexels-bill-emrich-230794-2.jpg" alt="London Big Ben">
-    <hr> 
-    <h2>Le mie spese</h2>
+    <hr>
+    <main>
+        <h2>Le mie spese</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120£</td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
 </body>
 </html>
