--- a/index.html
+++ b/index.html
@@ -27,7 +27,24 @@
                     <td>Biglietto Aereo</td>
                     <td>120£</td>
                 </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120£</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120£</td>
+                </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360£</td>
+                </tr>
+            </tfoot>
         </table>
     </main>
 </body>
