--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Il mio viaggio a Londra</title>
 </head>
 <body>
-    <h1>Il mio viaggio a Londra</h1>
-    <img src="pexels-bill-emrich-230794-0.jpg" alt="London Eye">
-    <img src="pexels-bill-emrich-230794-1.jpg" alt="London View">
-    <img src="pexels-bill-emrich-230794-2.jpg" alt="London Big Ben">
-    <hr>
+    <header>
+        <h1>Il mio viaggio a Londra</h1>
+        <img src="pexels-bill-emrich-230794-0.jpg" alt="London Eye">
+        <img src="pexels-bill-emrich-230794-1.jpg" alt="London View">
+        <img src="pexels-bill-emrich-230794-2.jpg" alt="London Big Ben">
+        <hr>
+    </header>
     <main>
         <h2>Le mie spese</h2>
         <table>
@@ -46,6 +48,14 @@
                 </tr>
             </tfoot>
         </table>
+        <hr>
+        <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la Tower of London</li>
+            <li>Visitare Greenwich</li>
+            <li>Visitare un'artista di strada a Covent Garden</li>
+            <li>Mangiare il tipico fish and chips inglese</li>
+        </ul>
         <hr>
     </main>
 </body>
