--- a/index.html
+++ b/index.html
@@ -57,6 +57,26 @@
             <li>Mangiare il tipico fish and chips inglese</li>
         </ul>
         <hr>
+        <h3>Info utili:</h3>
+        <ol>
+           <li>
+            Numeri utili di emergenza
+            <ul> <strong> 999 </strong> - Emergenza </ul>
+            <ul> <strong> 101 </strong> - Numero polizia </ul>
+            <ul> <strong> 111 </strong> - Numero assistenz medica </ul>
+           </li>
+           <li>
+            Hotel
+            <ul> <strong> Nome hotel: </strong> Buckingham Palace </ul> 
+            <ul> <strong> Indirizzo hotel: </strong> Westminster, London SW1A 1AA, Regno Unito </ul>
+           </li>
+           <li>
+            Aereo
+            <ul> <strong> Volo di andata: </strong> YI234X ore 9.30 da Milano Malpensa </ul>
+            <ul> <strong> Volo di ritorno: </strong> YI236X, ore 18.30 da London Heathrow </ul>
+           </li>
+        </ol>
+        <hr>
     </main>
 </body>
 </html>
