Aggiunta caratteri speciali

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <header>
         <h1>Il mio viaggio a Londra</h1>
-        <img src="pexels-bill-emrich-230794-0.jpg" alt="London Eye">
-        <img src="pexels-bill-emrich-230794-1.jpg" alt="London View">
-        <img src="pexels-bill-emrich-230794-2.jpg" alt="London Big Ben">
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
         <hr>
     </header>
     <main>
@@ -51,10 +51,10 @@
         <hr>
         <h3>Cose da fare</h3>
         <ul>
-            <li>Visitare la Tower of London</li>
-            <li>Visitare Greenwich</li>
-            <li>Visitare un'artista di strada a Covent Garden</li>
-            <li>Mangiare il tipico fish and chips inglese</li>
+            <li>Visitare la Tower of London &cross; </li>
+            <li>Visitare Greenwich &check; </li>
+            <li>Visitare un'artista di strada a Covent Garden &check; </li>
+            <li>Mangiare il tipico fish and chips inglese &cross; </li>
         </ul>
         <hr>
         <h3>Info utili:</h3>
