Correzioni sotto tabella

--- a/index.html
+++ b/index.html
@@ -61,19 +61,25 @@
         <ol>
            <li>
             Numeri utili di emergenza
-            <ul> <strong> 999 </strong> - Emergenza </ul>
-            <ul> <strong> 101 </strong> - Numero polizia </ul>
-            <ul> <strong> 111 </strong> - Numero assistenz medica </ul>
+            <ul>
+                <li> <strong> 999 </strong> - Emergenza </li>
+                <li> <strong> 101 </strong> - Numero polizia </li>
+                <li> <strong> 111 </strong> - Numero assistenz medica </li>
+            </ul>
            </li>
            <li>
             Hotel
-            <ul> <strong> Nome hotel: </strong> Buckingham Palace </ul> 
-            <ul> <strong> Indirizzo hotel: </strong> Westminster, London SW1A 1AA, Regno Unito </ul>
+            <ul>
+                <li> <strong> Nome hotel: </strong> Buckingham Palace </li> 
+            <li> <strong> Indirizzo hotel: </strong> Westminster, London SW1A 1AA, Regno Unito </li>
+            </ul>
            </li>
            <li>
             Aereo
-            <ul> <strong> Volo di andata: </strong> YI234X ore 9.30 da Milano Malpensa </ul>
-            <ul> <strong> Volo di ritorno: </strong> YI236X, ore 18.30 da London Heathrow </ul>
+            <ul>
+                <li> <strong> Volo di andata: </strong> YI234X ore 9.30 da Milano Malpensa </li>
+            <li> <strong> Volo di ritorno: </strong> YI236X, ore 18.30 da London Heathrow </li>
+            </ul>
            </li>
         </ol>
         <hr>
